BBDMS-Project-PHP-V2.4/k8s/phpmyadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bbdms-phpmyadmin
  namespace: bbdms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bbdms-phpmyadmin
  template:
    metadata:
      labels:
        app: bbdms-phpmyadmin
    spec:
      containers:
        - name: phpmyadmin
          image: phpmyadmin/phpmyadmin:5.2.1
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
