BBDMS-Project-PHP-V2.4/k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bbdms-mysql
  namespace: bbdms
spec:
  selector:
    app: bbdms-mysql
  ports:
    - port: 3306
      targetPort: 3306
  clusterIP: None
