BBDMS-Project-PHP-V2.4/k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bbdms-web
  namespace: bbdms
spec:
  selector:
    app: bbdms-web
  ports:
    - port: 80
      targetPort: 80
      name: http
  type: ClusterIP
